--- a/RevisionPages/Processing.html
+++ b/RevisionPages/Processing.html
@@ -3,6 +3,8 @@
 
 <head>
   <link type="text/css" href="../css/style.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="../img/processingFavicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="../img/processingFavicon-16x16.png" sizes="16x16" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 </head>
@@ -21,7 +23,7 @@
   <div class="container" id="home">
     <div class="row text-center">
       <div class="col-md-12">
-        <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>PROCESSING</h1>
+        <h1 class="head-main"> <img src="../img/processingIcon.png">ROCESSING</h1>
         <h2 class="head-sub-main">A Level Computer Science</h2>
       </div>
     </div>
