--- a/RevisionPages/Programming.html
+++ b/RevisionPages/Programming.html
@@ -3,6 +3,8 @@
 
 <head>
   <link type="text/css" href="../css/style.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="../img/programmingFavicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="../img/programmingFavicon-16x16.png" sizes="16x16" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <title>Programming</title>
 </head>
@@ -22,7 +24,7 @@
   <div class="container" id="home">
     <div class="row text-center">
       <div class="col-md-12">
-        <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>PROGRAMMING</h1>
+        <h1 class="head-main"><img src=../img/programmingIcon.png>ROGRAMMING</h1>
         <h2 class="head-sub-main">A Level Computer Science</h2>
       </div>
     </div>
@@ -126,6 +128,53 @@
   </section>
   <section class=" color-light">
     <div class="container">
+    </div>
+  </section>
+  <section class=" color-light">
+    <div class="container">
+
+      <div class="row text-center">
+        <div class="col-md-12">
+          <h2>Types of Languages</h2>
+          <p>
+            <h3>Most languages can be sorted into one of the following paradigms</h3>
+            <ul class="row text-left">
+              <h4 style="background-color:#f9ce36">Imperative paradigms</h4>
+              <li><b>Assembly</b> | <i>x86, ARM, LMC </i>| Low level languages with 1:1
+              correspondence between machine code and CPU instructions. Support variable names and labels </li>
+              <li><b>Procedural</b> | <i>C, Go</i> | Structured code using sequence,
+              selection, iteration and recursion. Code can be modular through use of procedures</li>
+              <li><b>Object Oriented</b> | <i>Java, C#, C++</i> | Make use of classes and objects which
+              define behaviour. Follows the principles defined above</li>
+              <li><b>Scripting</b> |<i> JavaScript, Bash, Python </i> | Languages designed for automation
+              rather than creating full applications. These are often used in embedded systems</li>
+              <h4 style="background-color:#f9ce36">Declarative paradigms</h4>
+              <li><b>Functional</b> |<i> Haskell, Groovy, Kotlin </i>| Code is divided into functions. Functions are passed
+              as arguments to higher order functions. Arguments and return values are used in
+              place of global variables. Closely linked to maths</li>
+              <li><b>Logic</b> | <i> Prolog </i> | The code is made from a ruleset which defines a
+              scenario. Answers are obtained by asking specific questions</li>
+              <li><b>Data Query</b> | <i> SQL</i> | Provide a way of interacting with data
+              structures such as a database. These work by using queries to specify specific
+              data rather than how to retrieve it.</li>
+
+            </ul>
+          </p>
+          <h3>Language Generations</h3>
+          <p class="paragraph-small">
+            Languages range in 'generations'; for example first generation refers to binary machine code.
+            Second generation languages are architecture specific (Assembly). Third gen are high level
+            (Procedural, Object Oriented, Scripting, Functional). Fourth generation languages are used
+            for data manipulation, originally just SQL and other query languages, these features are now
+            being implemented into high level languages, making the definitions less clear. Logic languages
+            come under the definition of fifth generation, however these have very few applications today.
+        </p>
+        </div>
+
+      </div>
+
+
+      </div>
     </div>
   </section>
   </div>
