--- a/RevisionPages/Processing.html
+++ b/RevisionPages/Processing.html
@@ -94,17 +94,47 @@
               <div id="second">
                 <img src="../img/pipeline.png">
               </div>
-        </div>
-        <p>
-           <h3>Scheduling</h3>
-           When supplied a list of tasks, processors need to be able to organise and deal with them in the most efficient manner.
-           Without scheduling, long tasks would occupy the CPU and prevent multi-tasking and other applications from running effectively.
-           
-        </p>
+            </div>
 
-        </div>
+           <h3>Scheduling</h3>
+            <div id="container">
+              <div id="first">
+                <ul  style="padding-left: 5%;padding-right: 5%">
+                  <h4 style="background-color:#f95436">Scheduling Methods</h4>
+                  <li> <b>Round Robin</b> Each task is assigned an amount of processing time, then the next one is worked on</li>
+                  <li> <b>First Come First Served</b> A basic queue structure, the tasks are processed in order.</li>
+                  <li> <b>Shortest Job First</b> Each time a job is added, the queue is arranged from shortest to longest total time</li>
+                  <li> <b>Shortest Remaining Time</b> Every clock cycle, the time left on each task is observed, and re-ordered from shortest to longest</li>
+                  <li> <b>Multi-Level Feedback queues</b> Processes are given priority and alotted time. If a task fails to finish within
+                     the alotted time, it is moved down to the next priority level for the next cycle</li>
+                </ul>
+
+              </div>
+              <div id="second" padding-right="10px">
+                <p>
+                   When supplied a list of tasks, processors need to be able to
+                   organise and deal with them in the most efficient manner.
+                   Without scheduling, long tasks would occupy the CPU and prevent
+                   multi-tasking and other applications from running effectively.
+                   Some types of scheduling consist of: Round robin, first come first
+                   served, shortest job first, shortest time remaining and multi-level feedback queues
+                   <br>
+                   Concurrent processing is the use of multiple data streams to one processor.
+                   This enables instructions to be completed in an overlapping manner time rather than after the last
+                   has been completed (sequentially). An example of this is task switching, which
+                   implements a method such as shortest time remaining to work on multiple tasks
+                   'simultaneously'.
+                   <br>
+                   Parallel processing is another way of completing several tasks at the same time,
+                   however this method involves using multiple processors working simultaneously.
+                   This can result in greater performance than concurrent processing as each task
+                   can have more time and power dedicated to it.
+                </p>
+              </div>
+            </div>
       </div>
     </div>
+  </div>
   </section>
   </div>
   <h4 align="right">James McNicholas 2017-2018</h4>
