--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 		</button>
-				<a class="navbar-brand" href="#top-section">James McNicholas</a>
-				<a href=https://matias.ma/nsfw/><img src="img/Head-1.png" width="60px" height="60px"></a>
+
+				<a href=https://matias.ma/nsfw/>				<a class="navbar-brand" href="#top-section">James McNicholas</a></a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -337,7 +337,7 @@ public class Calculator {
 			<div class="slide">
 				<div class="testimonials-carousel-thumbnail">
 					<img width="120" alt="" src="img/Head-1.png">
-					<div class='set blue'>
+					<div>
 						<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
 					</div>
 				</div>
@@ -375,6 +375,7 @@ public class GuessingNumberGame {
 		}
 }
 </pre>
+
 								</p>
 							</div>
 						</div>
@@ -390,7 +391,7 @@ public class GuessingNumberGame {
 				<div class="page-header text-center col-sm-12 col-lg-12 animated fade">
 					<h1>Gallery</h1>
 					<p class="lead">
-						A few examples of projects I have worked on
+						Some courses I have completed
 					</p>
 				</div>
 			</div>
@@ -438,19 +439,48 @@ public class GuessingNumberGame {
 							</figure>
 						</li>
 
+						<p class="lead">
+							Some screenshots of SimplePlayer, my latest and greatest project
+						</p>
+						<!-- YOUTUBE EMBED
 						<li>
 							<figure>
 								<div onclick="this.nextSibling.style.display='block'; this.style.display='none'"><img src="https://img.youtube.com/vi/ZmSSK5zJN6w/maxresdefault.jpg" style="cursor:pointer" /></div><div style="display:none">
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/ZmSSK5zJN6w?rel=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true"></iframe>
 								</div>
 								<figcaption>
-									<h3>Simple Player</h3>
+									<h3></h3>
 									<span>An innovative music player created with java</span>
 									<a href="https://github.com/jmcnicholas62743">Take a look</a>
 								</figcaption>
 							</figure>
 						</li>
+					  -->
+
 						<li>
+							<figure>
+									<div>
+										<img src="img/SimplePlayerLogin.png" alt="Codecademy">
+									</div>
+									<figcaption>
+										<h3>SimplePlayer</h3>
+										<span>An innovative music player created with java</span>
+										<a href="https://github.com/jmcnicholas62743/SimplePlayer">Take a look</a>
+									</figcaption>
+								</figure>
+						</li>
+
+						<li>
+							<figure>
+									<div>
+										<img src="img/SimplePlayer.png" alt="Codecademy">
+									</div>
+									<figcaption>
+										<h3>SimplePlayer</h3>
+										<span>An innovative music player created with java</span>
+										<a href="https://github.com/jmcnicholas62743/SimplePlayer">Take a look</a>
+									</figcaption>
+								</figure>
 						</li>
 					</ul>
 				</div>
