--- a/index.html
+++ b/index.html
@@ -214,35 +214,32 @@
 							</div>
 							<div class="testimonials-carousel-context">
 								<div class="testimonials-name">
-									FizzBuzz 0-100 <span>  Written in Java</span>
+									SimplePlayer <span>  Written in Java</span>
 								</div>
 								<div>
-									<pre class="prettyprint">
-import java.util.Scanner;
-public class FizzBuzz {
-public static void main(String[] args){
-	Scanner input = new Scanner(System.in);
-	System.out.println("Enter the 'Fizz' number");
-	int fizz = input.nextInt();
-	System.out.println("Enter the 'Buzz' number");
-	int buzz=input.nextInt();
-	for (int i=0;i<=100;i++){
-		String out="";
-		if (i%fizz==0){
-			out+="Fizz";
-		}
-		if (i%buzz==0){
-			out+="Buzz";
-		}
-		if (out.equals("")) {
-			System.out.println(i);
-		}else{
-			System.out.println(out);
-		}
-	}
-}
-}
-              </pre>
+									<p>
+										Need the source files? Visit my GitHub! <i class="fa fa-github"></i></a>
+									</p>
+									<p>
+										SimplePlayer is my biggest project in Java so far, and was originally
+										designed as my coursework project for A-Level Computer Science. The program
+										functions as a minimal music player, with the aim of being intuitive, fast, and offline.
+										The latest screenshots can be seen in the gallery, or you can watch this
+										<b>outdated </b>video from during the development process
+										<li>
+											<figure>
+												<div onclick="this.nextSibling.style.display='block'; this.style.display='none'"><img src="https://img.youtube.com/vi/ZmSSK5zJN6w/hqdefault.jpg" style="cursor:pointer" /></div><div style="display:none">
+													<iframe width="500" height="281" src="https://www.youtube.com/embed/ZmSSK5zJN6w?rel=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true"></iframe>
+												</div>
+												<figcaption>
+													<h3></h3>
+													<span>An innovative music player created with java</span>
+													<a href="https://github.com/jmcnicholas62743">Take a look</a>
+												</figcaption>
+											</figure>
+										</li>
+										The project is open source, meaning the code can be found on my github account, linked above.
+									</p>
 								</div>
 							</div>
 						</div>
