--- a/RevisionPages/Processing.html
+++ b/RevisionPages/Processing.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="../img/processingFavicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="../img/processingFavicon-16x16.png" sizes="16x16" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
+  <title>Processing</title>
 </head>
 
 <body class="Processing">
