Added some notes for Big O notation

--- a/RevisionPages/Computation.html
+++ b/RevisionPages/Computation.html
@@ -208,22 +208,45 @@
 
       <div class="row text-center">
         <div class="col-md-12">
-          <h2>Algorithms and Efficiency</h2>
+          <h2>Big O notation</h2>
           <p>
-            <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
-            <ul class="row text-left">
-              <li>Personal data should be obtained and processed fairly amnd lawfully </li>
-              <li>Personal data can be held only for specified and lawful purposes </li>
-              <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-              <li>Personal data should be accurate and kept up-to-date </li>
-              <li>Personal data should not be kept for longer than is necessary </li>
-              <li>Data must be processed in accordance with the rights of the data subject </li>
-              <li>Appropriate security measures must be taken against unauthorised access </li>
-              <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
-            </ul>
-            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
-            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
-            force will need to know if new recruits have any previous criminal convictions.
+            <h3>The efficiency of algorithms can be measured using Big O notation</h3>
+            Big O notation displays the efficiency of a process through the amount of iterations and time it will take
+            <table align="center">
+              <tr>
+                <h3>Time complexity for common algorithms</h3>
+              </tr>
+              <tr>
+                <th><h4 style="background-color:#6bb6e8">Algorithm</h4></th>
+                <th><h4 style="background-color:#6bb6e8">Best Complexity</h4></th>
+                <th><h4 style="background-color:#6bb6e8">Average Complexity</h4></th>
+                <th><h4 style="background-color:#6bb6e8">Worst Complexity</h4></th>
+              </tr>
+              <tr>
+              <td><h4 style="background-color:#6bb6e8">Quick Sort</h4></td>
+              <td><h4 style="background-color:#f99436">O (n log(n))</h4></td>
+              <td><h4 style="background-color:#f99436">O (n log(n))</h4></td>
+              <td><h4 style="background-color:#f95436">O(n<sup>2</sup>)</h4></td>
+            </tr>
+            <tr>
+              <td><h4 style="background-color:#6bb6e8">Merge Sort</h4></td>
+              <td><h4 style="background-color:#f99436">O (n log(n))</h4></td>
+              <td><h4 style="background-color:#f99436">O (n log(n))</h4></td>
+              <td><h4 style="background-color:#f99436">O (n log(n))</h4></td>
+           </tr>
+          <tr>
+            <td><h4 style="background-color:#6bb6e8">Bubble Sort</h4></td>
+            <td><h4 style="background-color:#f9ce36">O(n)</h4></td>
+            <td><h4 style="background-color:#f95436">O(n<sup>2</sup>)</h4></td>
+            <td><h4 style="background-color:#f95436">O(n<sup>2</sup>)</h4></td>
+          </tr>
+          <tr>
+            <td><h4 style="background-color:#6bb6e8">Insertion Sort</h4></td>
+            <td><h4 style="background-color:#f9ce36">O(n)</h4></td>
+            <td><h4 style="background-color:#f95436">O(n<sup>2</sup>)</h4></td>
+            <td><h4 style="background-color:#f95436">O(n<sup>2</sup>)</h4></td>
+          </tr>
+        </table>
           </p>
         </div>
 
