--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ public class GuessingNumberGame {
 								</div>
 								<figcaption>
 									<h3>MOOC</h3>
-									<span>Part 1</span>
+									<span>Part 1 of the Helsinki 2013 OOProgramming with Java course</span>
 									<a href="img/u3E9JK9.png">Take a look</a>
 								</figcaption>
 							</figure>
@@ -478,7 +478,22 @@ public class GuessingNumberGame {
 										<a href="https://github.com/jmcnicholas62743/SimplePlayer">Take a look</a>
 									</figcaption>
 								</figure>
+
 						</li>
+						<p class=lead>
+							Paper Progress - a 1 day project to quickly display progress through an exam paper
+						</p>
+						<li>
+							<figure>
+									<div>
+										<img src="img/paperProgress.png" alt="Caper Progress">
+									</div>
+									<figcaption>
+										<h3>Paper Progress</h3>
+										<a href="https://github.com/jmcnicholas62743/PaperProgress">Take a look</a>
+									</figcaption>
+								</figure>
+							</li>
 					</ul>
 				</div>
 			</div>
