Updated images of PaperProgress

--- a/index.html
+++ b/index.html
@@ -481,12 +481,12 @@ public class GuessingNumberGame {
 
 						</li>
 						<p class=lead>
-							Paper Progress - a 1 day project to quickly display progress through an exam paper
+							Paper Progress - a quick side project to quickly display progress through an exam paper
 						</p>
 						<li>
 							<figure>
 									<div>
-										<img src="img/paperProgress.png" alt="Caper Progress">
+										<img src="img/PaperProgress2.png" alt="Caper Progress">
 									</div>
 									<figcaption>
 										<h3>Paper Progress</h3>
